# LexAIRAG

./: .env  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  streamlit_app.py  streamlit_app_dev.py
api/: main.py
notebooks/: chunking.ipynb  pdf_links_first5.csv  pre-processing.ipynb  scrape.ipynb  scraper_v2.ipynb
pipeline/: chunking.py  db_init.py  preprocessing.py  scraper.py  similarity_search.py  test.py  upsert.py  vector.ipynb  vectorize.py
